fixed code added

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="icons">
                     <img src="images/icons/projects.png" alt="">
                     <h4 class="number">1458</h4>
-                    <p class="name">Awards Winnings</p>
+                    <p class="name">Project Finished</p>
 
 
 
@@ -136,14 +136,14 @@
                 <div class="icons">
                     <img src="images/icons/customers.png" alt="">
                     <h4 class="number">590</h4>
-                    <p class="name">Awards Winnings</p>
+                    <p class="name"> Client Worked</p>
 
 
                 </div>
                 <div class="icons">
                     <img src="images/icons/email.png" alt="">
                     <h4 class="number">22578</h4>
-                    <p class="name">Awards Winnings</p>
+                    <p class="name">Email Send</p>
 
 
                 </div>
