--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span> <h2 class="nav-title">G3 Architects</h2>
 
             </span>
-            <span>
+            <span class="nav-list">
                 <a href="">Home</a>
                 <a href="">About</a>
                 <a href="">Contact Us</a>
@@ -67,7 +67,7 @@
    
             
         </section>
-        <section class="container-two">
+        <section class="container-two ">
             <div class="feature">
                 <h2 class="feature-title"> Features you will <br> love & enjoy</h2>
                 <p class="feature-descrip">There are many variations of passages of Lorem Ipsum available, but the 
@@ -111,7 +111,7 @@
 
         </section>
 
-        <section class="container-three">
+        <section class="container-three ">
             <div class="facts">
                 <h2 class="facts-title">Some Facts</h2>
                 <p class="facts-descrip"> There are many variations of passages of Lorem Ipsum available, but <br>
@@ -151,7 +151,7 @@
 
         </section>
 
-        <section class="container-four">
+        <section class="container-four ">
             <div class="sponsor">
                 <h3 class="last-title">Our Sponsors</h3>
                 <p class="last-descrip">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
